--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 
 .ipynb_checkpoints/ps00-checkpoint.ipynb
+.ipynb_checkpoints/ps00-checkpoint.ipynb
+.ipynb_checkpoints/ps00-checkpoint.ok
+.ipynb_checkpoints/ps00-checkpoint.ipynb
+.ipynb_checkpoints/ps00-checkpoint.ipynb
