--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 .ipynb_checkpoints/ps00-checkpoint.ok
 .ipynb_checkpoints/ps00-checkpoint.ipynb
 .ipynb_checkpoints/ps00-checkpoint.ipynb
+.ipynb_checkpoints/ps00-checkpoint.ipynb
