--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 .ipynb_checkpoints/ps00-checkpoint.ipynb
 .ipynb_checkpoints/ps00-checkpoint.ipynb
 .ipynb_checkpoints/ps00-checkpoint.ipynb
+.ipynb_checkpoints/ps00-checkpoint.ipynb
