--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 .ipynb_checkpoints/ps00-checkpoint.ipynb
 .ipynb_checkpoints/ps00-checkpoint.ipynb
 .ipynb_checkpoints/ps00-checkpoint.ipynb
+.ipynb_checkpoints/ps00-checkpoint.ipynb
