--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 .ipynb_checkpoints/ps00-checkpoint.ipynb
 .ipynb_checkpoints/ps00-checkpoint.ipynb
 .ipynb_checkpoints/ps00-checkpoint.ipynb
+.ipynb_checkpoints/2020-06-19-patriarchal-succession-checkpoint.ipynb
