--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@
 .ipynb_checkpoints/ps00-checkpoint.ipynb
 .ipynb_checkpoints/ps00-checkpoint.ipynb
 .ipynb_checkpoints/2020-06-19-patriarchal-succession-checkpoint.ipynb
+.ipynb_checkpoints/ps00-checkpoint.ipynb
+.ipynb_checkpoints/ps00-checkpoint.ipynb
+.ipynb_checkpoints/ps01-answers-checkpoint.ipynb
+.ipynb_checkpoints/ps02-checkpoint.ipynb
