--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@
 .ipynb_checkpoints/ps00-checkpoint.ipynb
 .ipynb_checkpoints/ps01-answers-checkpoint.ipynb
 .ipynb_checkpoints/ps02-checkpoint.ipynb
+.ipynb_checkpoints/ps02-answers-checkpoint.ipynb
