--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@
 .ipynb_checkpoints/ps01-answers-checkpoint.ipynb
 .ipynb_checkpoints/ps02-checkpoint.ipynb
 .ipynb_checkpoints/ps02-answers-checkpoint.ipynb
+.DS_Store
